# masquerade

./: .gitignore  README.md  assign_new_values.py  faq.md  get_pdf_text.py  get_sensitive_data.py  main.py  mcp_pdf_redaction.py  pseudonymize_data.py  pyproject.toml  redact_data.py  remove_values.py  replace_text_pdf_fitz.py  requirements.txt  setup.py  setup.sh  swap_text_pdf.py  swap_text_pdf_working.py  tinfoil_llm.py
docs/: developers.md
masquerade/: __init__.py  assign_new_values.py  configure_claude.py  get_sensitive_data.py  mcp_pdf_redaction.py  redact_per_pdf.py  replace_text_pdf_spire.py
scripts/: redact_data.py
src/: assign_new_values.py  get_sensitive_data.py  redact_per_pdf.py  tinfoil_llm.py
src/masquerade/: get_sensitive_data.py  mcp_pdf_redaction.py  redact_per_pdf.py
src/scripts/: pseudonymize_data.py  redact_data.py
