[project]
name = "masquerade"
version = "0.1.0"
description = "A privacy firewall for PDF files that automatically detects and redacts sensitive data"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "fastmcp==0.4.1",
    "mcp==1.3.0",
    "PyMuPDF==1.23.8",
    "tinfoil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "mcp_pdf_redaction.py",
    "masquerade/*.py"
]

[tool.hatch.envs.default]
python = "3.12"
